# ebooksite

./: .gitignore  1panel-deploy.md  Dockerfile  PROGRESS.md  R2_CONFIG.md  README.md  composer.json  cookies.txt  docker-compose.yml  push-to-new-repo.sh  pyproject.toml  requirements.txt  server.py  update.sh  重构计划.md
app/: nuxt.config.ts  package-lock.json  package.json
app/components/: AppHeader.vue
app/composables/: useApi.ts
app/i18n/i18n/: en.json  zh.json
app/layouts/: admin.vue  default.vue
app/middleware/: admin-auth.ts
app/pages/: download.vue  feedback.vue  index.vue  library.vue  login.vue  register.vue  search.vue  settings.vue
app/pages/admin/: batch-download.vue  books.vue  cards.vue  feedbacks.vue  index.vue  login.vue  settings.vue  sources.vue  users.vue
app/plugins/: talebook.ts
app/stores/: auth.ts
backend/: .env.example  .env.r2.backup  composer.json
backend/app/Models/: AuditLog.php  Book.php  Card.php  Download.php  Feedback.php  Setting.php  SystemSetting.php  User.php  UserDownload.php
backend/app/Services/: ApiResponseService.php  (+1 more)
backend/bootstrap/: app.php
backend/config/: services.php
backend/public/: index.html
backend/routes/: api.php  web.php
data/: books.db
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
tests/: test_auth.py  test_search.py
webserver/: indexer.py  legado_parser.py  models.py  settings.py
webserver/handlers/: __init__.py  admin.py  auth.py  base.py  batch_download.py  books.py  download.py  search.py  settings.py  user.py
(+54 files in other folders)
