[project]
name = "booksite"
version = "0.1.0"
description = "精简版图书管理系统"
requires-python = ">=3.11"

[project.dependencies]
tornado = "==6.5"
bcrypt = ">=4.0.0"
aiohttp = ">=3.8.0"
apsw = ">=3.51.2.0"
jinja2 = "==3.1.6"
python-dateutil = ">=2.9.0"
requests = ">=2.31.0"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
